--- a/css/draganddrop.css
+++ b/css/draganddrop.css
@@ -1,10 +1,11 @@
 #leftbox{
 	text-align:center;
 	float: left;
-	width: 250px;
-	height: 250px;
+	width: 15.625em;
+	height: 15.625em;
 	margin: 5px;
 	border: 3px solid blue;
+	line-height: 15.625em;
 }
 
 #rightbox{
@@ -14,6 +15,7 @@
 	height: 250px;
 	margin: 5px;
 	border: 3px solid green;
+	line-height: 250px;
 }
 img{
 	display:block;
